Updated navigation. Added footer. About page created but has no content.

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,6 @@
  * 5. $bp6  =  1220px 	(76.250rem)
  * 6. $bp7  =  1400px 	(87.5rem)
  */
-@import url(https://fonts.googleapis.com/css?family=Cabin);
 html, body, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, hgroup, menu, nav, section, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -43,7 +42,7 @@ a {
   border-bottom: 4px solid #b3eced;
   color: #2dbec1;
   text-decoration: none;
-  transition: all .25s; }
+  transition: all .20s; }
   a:visited {
     color: #2dbec1; }
   a:hover {
@@ -114,7 +113,7 @@ hr {
   clear: both;
   display: block;
   height: 0;
-  margin: 40px 0;
+  margin: 20px 0;
   padding: 0;
   width: 50px; }
 
@@ -723,7 +722,7 @@ blockquote {
 
 .pace-progress {
   background: #2dbec1;
-  height: 4px;
+  height: 8px;
   position: fixed;
   top: 0;
   right: 100%;
@@ -737,18 +736,6 @@ blockquote {
   opacity: 0;
   transition: all .10s; }
 
-/*
-p {
-  margin-top: 50px;
-  font-family: "Cabin", sans-serif;
-  letter-spacing: 12px;
-  text-indent: 12px;
-  color: $colorOutline;
-  animation: 
-    colorText $animDuration ease-out infinite,
-    nudgeText $animDuration ease-out infinite;
-}
-*/
 .mouse {
   background: #4e5559 linear-gradient(transparent 0%, transparent 50%, #ffffff 50%, #ffffff 100%);
   position: relative;
@@ -871,40 +858,15 @@ p {
     transform: translateY(10px); }
   90% {
     transform: translateY(0); } }
-@keyframes nudgeText {
-  0% {
-    transform: translateY(0); }
-  20% {
-    transform: translateY(2px); }
-  30% {
-    transform: translateY(0); }
-  50% {
-    transform: translateY(2px); }
-  60% {
-    transform: translateY(0); }
-  80% {
-    transform: translateY(2px); }
-  90% {
-    transform: translateY(0); } }
-@keyframes colorText {
-  21% {
-    color: #4e5559; }
-  30% {
-    color: #ffffff; }
-  51% {
-    color: #4e5559; }
-  60% {
-    color: #ffffff; }
-  81% {
-    color: #4e5559; }
-  90% {
-    color: #ffffff; } }
 /* ==========================================================================
-   #SITE-HEAD
+   #HEADER
    ========================================================================== */
+/**
+ * Website header which contains a logo and navigation toggle.
+ */
 .page-head {
   box-sizing: border-box;
-  padding: 20px 2.5%;
+  padding: 20px 20px;
   position: relative;
   z-index: 1000;
   width: 100%; }
@@ -914,13 +876,25 @@ p {
   .page-head:after {
     clear: both; }
 
+/**
+ * Link (to homepage) which is parent of `.page-head__logo`.
+ */
 .page-head__home-link {
   border: none;
   display: block;
-  float: left;
-  fill: white; }
+  float: left; }
+  .page-head__home-link .circle {
+    fill: #0d0f0f; }
+  .page-head__home-link .stroke {
+    fill: white; }
+  .page-head__home-link .m {
+    fill: white; }
 
+/**
+ * Website logo, child of `.page-head__home-link`.
+ */
 .page-head__logo {
+  display: block;
   height: 75px;
   transition: all .25s;
   width: 75px;
@@ -936,30 +910,178 @@ p {
       width: 100px; } }
 
 /* ==========================================================================
+   #MAIN NAVIGATION TOGGLE
+   ========================================================================== */
+/**
+ * Toggle that shows/hides the navigation list.
+ *
+ * 1. Toggle container has a larger hit area than the icon suggests.
+ * 2. Adjust position of toggle on wider viewports.
+ * 3. Remove `:focus` styling.
+ * 4. Styling of the middle line of menu icon.
+ * 5. Styling for top and bottom lines.
+ * 6. Bottom line specific styling.
+ */
+.page-head__toggle {
+  /* [1] */
+  border-bottom: none;
+  cursor: pointer;
+  display: block;
+  height: 50px;
+  float: right;
+  position: fixed;
+  top: 30px;
+  right: 30px;
+  text-indent: -9999px;
+  transition: all .25s ease-in;
+  width: 50px;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  user-select: none;
+  z-index: 9999999999999;
+  /* [1] */
+  /* [2] */
+  /* [3] */
+  /* [4] */
+  /* [5] */
+  /* [6] */ }
+  @media (min-width: 48em) {
+    .page-head__toggle {
+      /* [2] */
+      top: 40px;
+      right: 40px; } }
+  .page-head__toggle:focus {
+    outline: none;
+    /* [3] */ }
+  .page-head__toggle span {
+    /* [4] */
+    background: #2dbec1;
+    display: block;
+    height: 6px;
+    position: absolute;
+    top: 26px;
+    right: 5px;
+    left: 10px;
+    transition: background .20s .05s; }
+    .page-head__toggle span:before, .page-head__toggle span:after {
+      /* [5] */
+      background: #2dbec1;
+      content: "";
+      display: block;
+      height: 6px;
+      position: absolute;
+      top: -10px;
+      left: 0;
+      transition-duration: .20s, .20s, .20s;
+      transition-delay: .80s, .20s, 0s;
+      transition-property: background, top, transform;
+      width: 100%; }
+    .page-head__toggle span:after {
+      /* [6] */
+      top: auto;
+      bottom: -10px;
+      transition-property: background, bottom, transform; }
+
+/**
+ * Styling of the toggle once navigation is visible.
+ *
+ * 1. Instantly hide middle line.
+ * 2. Change colour and transitition delay. First value is `background-color`,
+ *    the next is position (0s for sharper transition) and the last is for the
+ *    actual `transform`.
+ * 3. Adjust position of top/bottom lines to form an 'x' shape.
+ */
+.show-nav .page-head__toggle span {
+  background: none;
+  /* [1] */
+  transition: background .10s .10s; }
+.show-nav .page-head__toggle span:before,
+.show-nav .page-head__toggle span:after {
+  /* [2] */
+  background: #0d0f0f;
+  transition-delay: .10s, 0s, .20s; }
+.show-nav .page-head__toggle span:before {
+  /* [3] */
+  top: 0;
+  transform: rotate(45deg); }
+.show-nav .page-head__toggle span:after {
+  /* [3] */
+  bottom: 0;
+  transform: rotate(-45deg); }
+
+/**
+ * A class is added to the `body` when the navigation is in the process of
+ * closing. This helps us with some suitble styling adjustments...
+ *
+ * 1. Set the `background-color` to match top/bottom lines.
+ * 2. Add delay to transition so middle line is only shown once there's space
+ *    for it, once the top/bottom lines are in position.
+ */
+.hide-nav .page-head__toggle span {
+  background: #0d0f0f;
+  /* [1] */
+  transition: background .10s .20s; }
+
+/* ==========================================================================
    #FOOTER
    ========================================================================== */
+/**
+ * Website footer.
+ */
 .page-foot {
   background: #0d0f0f;
-  padding: 100px 0 80px;
+  color: white;
+  padding: 150px 0 130px;
   text-align: center; }
+  .page-foot a,
+  .page-foot a:visited {
+    color: white; }
   .page-foot a:hover,
   .page-foot a:focus {
     color: white; }
 
+/**
+ * Link (to homepage) which is parent of `.page-foot__logo`.
+ */
 .page-foot__home-link {
-  border-bottom: none;
+  border: none;
   display: inline-block;
-  margin: -50px auto 50px;
-  opacity: .10;
-  width: 75px; }
+  margin: 0 auto 40px; }
+  .page-foot__home-link .circle {
+    fill: #0d0f0f; }
+  .page-foot__home-link .stroke {
+    fill: white; }
+  .page-foot__home-link .m {
+    fill: white; }
+
+/**
+ * Website footer logo, child of `.page-foot__home-link`.
+ */
+.page-foot__logo {
+  display: block;
+  height: 75px;
+  transition: all .25s;
+  width: 75px;
+  /* [1] */
+  /* [2] */
+  /* [3] */
+  /* [4] */
+  /* [5] */
+  /* [6] */ }
+  @media (min-width: 48em) {
+    .page-foot__logo {
+      height: 100px;
+      width: 100px; } }
 
 .icon {
   height: 1em;
   width: 1em; }
 
-.hgroup.align-center hr {
-  margin-left: auto;
-  margin-right: auto; }
+.hgroup {
+  margin-bottom: 40px; }
+  .hgroup.align-center hr {
+    margin-left: auto;
+    margin-right: auto; }
 
 .align-left {
   text-align: left; }
@@ -971,16 +1093,55 @@ p {
   text-align: right; }
 
 .contact-list {
-  list-style: none; }
+  list-style: none;
+  margin: 0 0 10px;
+  padding-left: 0; }
+  .contact-list .icon {
+    fill: #2dbec1;
+    font-size: 1.2em;
+    margin-right: 10px;
+    position: relative;
+    top: 2px;
+    vertical-align: text-top; }
+  .contact-list .icon--envelope {
+    top: 3px; }
+  .contact-list .icon--location {
+    margin-right: 5px; }
 
 .contact-list__item {
   display: inline-block;
-  margin-bottom: 10px; }
-  .contact-list__item:first-child {
-    width: 100%; }
+  margin: 0 10px 10px; }
 
 .contact-list__link {
-  border-bottom: 0; }
+  border-color: transparent;
+  padding-bottom: 2px; }
+  .contact-list__link:hover, .contact-list__link:active {
+    border-color: #252a2a; }
+
+.site-nav .contact-list {
+  color: #0d0f0f;
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  opacity: 0;
+  text-align: center;
+  width: 100%;
+  transform: translateY(100px);
+  transition: all 0.4s 0.1s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+  .show-nav .site-nav .contact-list {
+    opacity: 1;
+    transform: translateY(0);
+    transition-delay: .60s;
+    transition-duration: .60s; }
+.site-nav .contact-list__link {
+  color: #0d0f0f; }
+  .site-nav .contact-list__link:visited {
+    color: #0d0f0f; }
+  .site-nav .contact-list__link:hover, .site-nav .contact-list__link:focus {
+    color: #0d0f0f;
+    border-color: #28aaac; }
+.site-nav .icon {
+  fill: #0d0f0f; }
 
 .social-list {
   list-style: none; }
@@ -996,17 +1157,19 @@ p {
   border-bottom: 0; }
 
 /* ==========================================================================
-   #NAVIGATION
-   ========================================================================== */
-/* ==========================================================================
    #SITE-NAV
    ========================================================================== */
 /**
- * `.site-nav` is the main page navigation. It has 3 states:
+ * A class of `.show-nav` is added to the body tag once `.site-nav` is activated
+ * (visible) once the `.page-head__toggle` is clicked. `.page-head__toggle` is
+ * extended in _layout-banner.scss.
  */
 .show-nav {
   overflow: hidden; }
 
+/**
+ * `.site-nav` is the main page navigation. It has 3 states:
+ */
 .site-nav {
   background: #2dbec1;
   border: 0 solid white;
@@ -1020,7 +1183,7 @@ p {
   left: 0;
   text-align: center;
   transform: scale(0.9);
-  transition: border .10s .10s ease-in, opacity .10s .40s ease, transform .10s .40s ease, visibility .10s .40s;
+  transition: border .10s .10s ease-in, opacity .10s .80s ease, transform .20s .80s ease, visibility .10s .80s;
   user-select: none;
   visibility: hidden;
   width: 100%;
@@ -1028,12 +1191,12 @@ p {
   .show-nav .site-nav {
     border-width: 16px;
     opacity: 1;
-    overflow-y: auto;
     transition: border .05s .40s ease-in, opacity .10s ease-in, transform .20s ease-in;
     visibility: visible;
     transform: scale(1);
     z-index: 1000; }
   .hide-nav .site-nav {
+    transform: scale(1);
     visibility: visible;
     z-index: 1000; }
 
@@ -1048,10 +1211,10 @@ p {
   width: 100%; }
 
 .site-nav__item {
-  margin: 20px 0;
+  margin: 10px 0;
   opacity: 0;
   transform: translateY(-150px);
-  transition: all 0.4s 0s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: all 0.4s 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   /* [1] */
   /* [2] */
   /* [3] */
@@ -1086,11 +1249,25 @@ p {
   /* [4] */
   /* [5] */
   /* [6] */ }
+  .site-nav__link:after {
+    background: #28aaac;
+    content: "";
+    display: block;
+    height: 8px;
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transition: all .10s ease;
+    width: 0; }
   .site-nav__link:visited {
     background: transparent;
     color: #0d0f0f; }
-  .site-nav__link:hover, .site-nav__link:focus {
-    color: white; }
+  .site-nav__link:hover, .site-nav__link:focus, .site-nav__link.current {
+    color: #f1fcfc;
+    outline: none; }
+    .site-nav__link:hover:after, .site-nav__link:focus:after, .site-nav__link.current:after {
+      margin-left: -25px;
+      width: 50px; }
   @media (min-width: 64em) {
     .site-nav__link {
       font-size: 60px;
@@ -1103,100 +1280,15 @@ p {
   .site-nav__link--current:hover, .site-nav__link--current:focus {
     background: white; }
 
-/**
- * Toggle that shows/hides the navigation list.
- *
- * 1. Background-position is adjusted when class of `.open` is added by
- *    responsive-nav.js.
- * 2. Hide toggle in wider viewports.
- */
-.page-head__toggle {
-  border-bottom: none;
-  cursor: pointer;
-  display: block;
-  height: 55px;
-  float: right;
-  position: fixed;
-  top: 30px;
-  right: 2.5%;
-  text-indent: -9999px;
-  transition: all .25s ease-in;
-  width: 55px;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-touch-callout: none;
-  user-select: none;
-  z-index: 9999999999999;
-  /* [1] */
-  /* [2] */
-  /* [3] */
-  /* [4] */
-  /* [5] */
-  /* [6] */ }
-  @media (min-width: 48em) {
-    .page-head__toggle {
-      top: 40px; } }
-  .page-head__toggle:focus {
-    outline: none; }
-  .page-head__toggle span {
-    background: #2dbec1;
-    display: block;
-    height: 6px;
-    position: absolute;
-    top: 26px;
-    right: 10px;
-    left: 10px; }
-    .page-head__toggle span:before, .page-head__toggle span:after {
-      background: #2dbec1;
-      content: "";
-      display: block;
-      height: 6px;
-      position: absolute;
-      top: -10px;
-      left: 0;
-      width: 100%; }
-    .page-head__toggle span:after {
-      top: auto;
-      bottom: -10px; }
-    .show-nav .page-head__toggle span {
-      background: #0d0f0f; }
-      .show-nav .page-head__toggle span:before, .show-nav .page-head__toggle span:after {
-        background: #0d0f0f; }
-
-.page-head__toggle span {
-  transition: background 0s .25s; }
-
-.page-head__toggle span::before,
-.page-head__toggle span::after {
-  transition-duration: .25s, .25s;
-  transition-delay: .25s, 0s; }
-
-.page-head__toggle span::before {
-  transition-property: top, transform; }
-
-.page-head__toggle span::after {
-  transition-property: bottom, transform; }
-
-/* active state, i.e. menu open */
-.show-nav .page-head__toggle span {
-  background: none !important; }
-.show-nav .page-head__toggle span:before {
-  top: 0;
-  transform: rotate(45deg); }
-.show-nav .page-head__toggle span:after {
-  bottom: 0;
-  transform: rotate(-45deg); }
-.show-nav .page-head__toggle span:before,
-.show-nav .page-head__toggle span:after {
-  transition-delay: 0s, .25s; }
-
 .band {
+  padding: 150px 0 130px;
   width: 100%; }
-  .masthead + .band {
-    padding-top: 80px; }
+  .page-head + .band {
+    padding-top: 20px; }
 
 .wrap {
   margin: 0 auto;
-  padding: 40px 20px 20px;
+  padding: 0 20px;
   max-width: 1200px; }
 
 .wrap--narrow {
@@ -1321,17 +1413,29 @@ p {
   background: #0d0f0f;
   color: #b1b6b7; }
   .masthead--home .masthead__wrap {
-    padding: 20px 0 80px; }
+    padding: 0 20px 60px; }
   .masthead--home h1,
   .masthead--home h2,
   .masthead--home h3,
   .masthead--home h4 {
     color: white; }
+  .masthead--home p {
+    margin-bottom: 0; }
   .masthead--home .lead {
-    color: #eef0f0; }
+    color: #eef0f0;
+    margin-bottom: 20px; }
   .masthead--home hr {
     border-color: #2dbec1;
     margin: 20px 0 20px; }
+  .masthead--home a {
+    border-color: transparent;
+    color: #2dbec1;
+    padding-bottom: 2px; }
+    .masthead--home a:visited {
+      color: #2dbec1; }
+    .masthead--home a:hover, .masthead--home a:focus {
+      color: white;
+      border-color: #2dbec1; }
 
 /**
  * Great British Meat Co.
