--- a/scss/elements/_hr.scss
+++ b/scss/elements/_hr.scss
@@ -13,7 +13,7 @@ hr {
 	clear : both;
 	display : block;
 	height: 0;
-	margin: ($vertical-spacing * 2) 0;
+	margin: $vertical-spacing 0;
 	padding: 0;
 	width: 50px;
 }
