--- a/css/main.css
+++ b/css/main.css
@@ -177,17 +177,32 @@ figure {
     margin-bottom: 20px; }
 
 figcaption {
-  color: #b1b6b7;
-  font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #cccfcf;
+  font-family: "tablet-gothic-narrow", "Helvetica Neue", sans-serif;
   font-size: 1.6rem;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 600;
   margin-bottom: 20px;
   text-transform: none; }
   img + figcaption {
     margin-top: -10px; }
   .img-stroke + figcaption {
     padding: 0 8px; }
+
+.bulge {
+  transition: all .10s;
+  /* [1] */
+  /* [2] */
+  /* [3] */
+  /* [4] */
+  /* [5] */
+  /* [6] */ }
+  @media (min-width: 87.5em) {
+    .bulge {
+      margin: 40px -20% 40px;
+      text-align: center; }
+      .bulge img {
+        width: 100%; } }
 
 /* ==========================================================================
    #SITE
